SwerveMotorFirmware.cydsn/BUILD.log
--------------- Build Started: 05/27/2023 12:39:57 Project: SwerveMotorFirmware, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'Period_Reset_Handler':
main.c:77:9: warning: unused variable 'timer' [-Wunused-variable]
     int timer = Timer_1_ReadStatusRegister();
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/MotorDrive.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c MotorDrive.c -o .\CortexM0\ARM_GCC_541\Debug\MotorDrive.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/PositionPID.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c PositionPID.c -o .\CortexM0\ARM_GCC_541\Debug\PositionPID.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/Motor_Unit_CAN.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c Motor_Unit_CAN.c -o .\CortexM0\ARM_GCC_541\Debug\Motor_Unit_CAN.o
Motor_Unit_CAN.c: In function 'NextStateFromCAN':
Motor_Unit_CAN.c:242:28: warning: implicit declaration of function 'GetPotADCFromPacket' [-Wimplicit-function-declaration]
                 setTickMin(GetPotADCFromPacket(receivedPacket));
                            ^
Motor_Unit_CAN.c:243:28: warning: implicit declaration of function 'GetPotmDegFromPacket' [-Wimplicit-function-declaration]
                 setmDegMin(GetPotmDegFromPacket(receivedPacket));
                            ^
Motor_Unit_CAN.c:305:17: error: a label can only be part of a statement and a declaration is not a statement
                 uint8_t sender_DG = GetSenderDeviceGroupCode(receivedPacket);
                 ^
Motor_Unit_CAN.c:306:17: error: expected expression before 'uint8_t'
                 uint8_t sender_SN = GetSenderDeviceSerialNumber(receivedPacket);
                 ^
Motor_Unit_CAN.c:310:80: error: 'sender_SN' undeclared (first use in this function)
                         AssembleTelemetryReportPacket(packetToSend, sender_DG, sender_SN, 
                                                                                ^
Motor_Unit_CAN.c:310:80: note: each undeclared identifier is reported only once for each function it appears in
Motor_Unit_CAN.c:311:81: warning: implicit declaration of function 'getPotVal' [-Wimplicit-function-declaration]
                                                       PACKET_TELEMETRY_ADC_RAW, getPotVal());
                                                                                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/27/2023 12:40:00 ---------------
